// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Open command help 1`] = `
{
  code: 0,
  err: ,
  out: Usage: index apps open [options] <input> [options...]

Open a package by slug/version

Options:
  -l, --log   Enable logging
  -h, --help  display help for command,
}
`;

exports[`Open command install and run steinberg/validator > (arm64) 1`] = `
{
  code: 1,
  err: ,
  out: Install steinberg/validator
No compatible files found for steinberg/validator,
}
`;

exports[`Open command install and run steinberg/validator > (x64) 1`] = `
{
  code: 0,
  err: ,
  out: Install steinberg/validator
Installed steinberg/validator,
}
`;

exports[`Open command with non-existent package 1`] = `
{
  code: 1,
  err: ,
  out: Open non-existent/package
Package non-existent/package not found,
}
`;
